--- a/app/src/main/res/layout/fragment_shop_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_shop_edit_profile.xml
@@ -46,7 +46,14 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
+            <ProgressBar
+                android:id="@+id/pb_data_shop"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="gone" />
+
             <android.support.v7.widget.CardView
+                android:id="@+id/cv_data_shop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
