--- a/app/src/main/res/layout/fragment_shop_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_shop_edit_profile.xml
@@ -48,9 +48,18 @@
 
             <ProgressBar
                 android:id="@+id/pb_data_shop"
-                android:layout_width="50dp"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:visibility="gone" />
+                android:layout_marginTop="70dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/colorPrimaryLight"
+                android:indeterminateTintMode="src_atop"
+                android:visibility="gone"
+                android:layout_below="@+id/btn_login_activity"
+                android:layout_centerHorizontal="true" />
+
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cv_data_shop"
