--- a/app/src/main/res/layout/fragment_shop_profile.xml
+++ b/app/src/main/res/layout/fragment_shop_profile.xml
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:text="Nombre"
-
+                    android:textColor="@color/colorWhite"
                     android:textAlignment="center"
                     android:textSize="25dp" />
 
@@ -51,6 +51,7 @@
                     android:layout_marginTop="5dp"
                     android:text="Descripcion"
                     android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
                     android:textSize="15dp" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -73,8 +74,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Datos de Interés"
+                    android:textAlignment="center"
                     android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="@color/colorWhite"/>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -128,6 +131,5 @@
                 </android.support.v7.widget.CardView>
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
