--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:textSize="70dp"
         android:gravity="center_horizontal"
         android:layout_marginTop="34dp"
@@ -110,7 +110,7 @@
         android:id="@+id/btn_register_activity"
         android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/create_account"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
