--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,6 @@
         android:layout_marginTop="200dp"
         android:ems="20"
         android:gravity="center_horizontal"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:textSize="70dp" />
 </LinearLayout>
