--- a/app/src/main/res/layout/item_dating_management.xml
+++ b/app/src/main/res/layout/item_dating_management.xml
@@ -84,8 +84,14 @@
                 <TextView
                     android:id="@+id/date_item"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/state_item"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="28/09/2017 18:30"/>
+                    android:textStyle="italic"/>
+
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
